tests/baselines/reference/mergedDeclarations7.errors.txt
tests/cases/compiler/test.ts(4,5): error TS2322: Type 'PassportStatic' is not assignable to type 'Passport'.
  Types of property 'use' are incompatible.
    Type '() => PassportStatic' is not assignable to type '() => this'.
      Type 'PassportStatic' is not assignable to type 'this'.


==== tests/cases/compiler/passport.d.ts (0 errors) ====
    declare module 'passport' {
        namespace passport {
            interface Passport {
                use(): this;
            }
    
            interface PassportStatic extends Passport {
                Passport: {new(): Passport};
            }
        }
    
        const passport: passport.PassportStatic;
        export = passport;
    }
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import * as passport from "passport";
    import { Passport } from "passport";
    
    let p: Passport = passport.use();
        ~
!!! error TS2322: Type '{|PassportStatic|0|}' is not assignable to type '{|Passport|1|}'.
!!! error TS2322:   Types of property 'use' are incompatible.
!!! error TS2322:     Type '() => {|PassportStatic|2|}' is not assignable to type '() => this'.
!!! error TS2322:       Type '{|PassportStatic|3|}' is not assignable to type 'this'.
!!! annotated symbol 0 tests/cases/compiler/passport.d.ts:7:19
!!! annotated symbol 1 tests/cases/compiler/passport.d.ts:8:13
!!! annotated symbol 2 tests/cases/compiler/passport.d.ts:7:19
!!! annotated symbol 3 tests/cases/compiler/passport.d.ts:7:19